Make the ball jump the second obstacle correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -500,7 +500,7 @@ header p {
   5% {
     transform: translateY(-60px);
   }
-  10% {
+  55% {
     transform: translateY(-60px);
   }
 }
